--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1791,148 +1791,6 @@ body {
   margin-top: 1rem;
   margin-bottom: 0;
 }
-.cid-qAk93xTuWj {
-  background-image: url("../../../assets/images/camp1-color-1938x1080.jpg");
-}
-.cid-qAk93xTuWj .media-content {
-  word-wrap: break-word;
-}
-.cid-qAk93xTuWj .form-inline {
-  display: block;
-}
-.cid-qAk93xTuWj .form-inline .form-group {
-  padding: 0.5rem;
-  display: inline-block;
-}
-.cid-qAk93xTuWj .form-inline .buttons-wrap {
-  display: inline-block;
-}
-.cid-qAk93xTuWj .form-inline input {
-  text-align: center;
-}
-.cid-qAk93xTuWj .mbr-figure {
-  padding-bottom: 2rem;
-}
-@media (min-width: 992px) {
-  .cid-qAk93xTuWj .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-qAk93xTuWj .mbr-text {
-    text-align: center;
-  }
-  .cid-qAk93xTuWj .form-inline {
-    text-align: center;
-  }
-}
-@media (max-width: 768px) {
-  .cid-qAk93xTuWj .form-inline input {
-    font-size: .85rem;
-  }
-}
-.cid-qAq4mRX1i7 {
-  padding-top: 45px;
-  padding-bottom: 45px;
-  background-color: #2e2e2e;
-}
-@media (max-width: 767px) {
-  .cid-qAq4mRX1i7 .content {
-    text-align: center;
-  }
-  .cid-qAq4mRX1i7 .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-.cid-qAq4mRX1i7 .img-logo img {
-  height: 6rem;
-}
-.cid-qAq4mRX1i7 [type="email"] {
-  font-size: .75rem;
-  margin-bottom: 5px;
-  text-align: center;
-  min-width: 150px;
-}
-.cid-qAq4mRX1i7 .input-group-btn {
-  display: inline-block;
-}
-.cid-qAq4mRX1i7 .input-group-btn a.btn {
-  margin: 0 !important;
-}
-.cid-qAq4mRX1i7 .input-group {
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.cid-qAq4mRX1i7 [type="submit"] {
-  padding: .75rem 1.5625rem !important;
-  margin-left: .625rem;
-  text-transform: none;
-}
-.cid-qAq4mRX1i7 .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-}
-.cid-qAq4mRX1i7 .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-qAq4mRX1i7 .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-qAq4mRX1i7 .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-qAq4mRX1i7 .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-qAq4mRX1i7 .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-@media (max-width: 767px) {
-  .cid-qAq4mRX1i7 .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-qAq4mRX1i7 .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-qAq4mRX1i7 form .input-group input.form-control,
-.cid-qAq4mRX1i7 form .input-group-btn .btn {
-  border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px;
-  border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px;
-}
-.cid-qAq4mRX1i7 .form-inline {
-  justify-content: center;
-}
-.cid-qAq4mRX1i7 .form-group {
-  margin: 0;
-}
-@media (max-width: 767px) {
-  .cid-qAq4mRX1i7 .foot-logo {
-    text-align: center !important;
-  }
-  .cid-qAq4mRX1i7 .foot-title {
-    text-align: center !important;
-  }
-  .cid-qAq4mRX1i7 .mbr-text {
-    text-align: center !important;
-  }
-}
 .cid-qApi1A4Lct {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -2002,4 +1860,7 @@ body {
 }
 .cid-qApi1A4Lct .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-qApi1A4Lct .media-container-row .mbr-text {
+  color: #ff3366;
 }
